--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <input type="hidden" name="access_key" value="ac7d84ef-e6b6-4caa-9967-b4907d16c897">
 
     <!-- Form Inputs. Each input must have a name="" attribute -->
-    <input type="text" name="name" required>
-    <input type="email" name="email" required>
-    <textarea name="message" required></textarea>
+    <p><input type="text" name="name" required></p>
+    <p><input type="email" name="email" required></p>
+    <p><textarea name="message" required></textarea></p>
 
     <!-- hCaptcha Spam Protection -->
     <div class="h-captcha" data-captcha="true"></div>
