--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Browser</title>
+  <title>FORM</title>
 </head>
 
 <body>
  <form action="https://api.web3forms.com/submit" method="POST">
 
-    <!-- Replace with your Access Key -->
+
     <input type="hidden" name="access_key" value="ac7d84ef-e6b6-4caa-9967-b4907d16c897">
 
-    <!-- Form Inputs. Each input must have a name="" attribute -->
+  
     <p><input type="text" name="name" required></p>
     <p><input type="email" name="email" required></p>
     <p><textarea name="message" required></textarea></p>
