--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div>
  <form action="https://api.web3forms.com/submit" method="POST">
 
 
@@ -23,7 +24,8 @@
     <button type="submit">Submit Form</button>
 
 </form>
-
+  </div>
+  
 </body>
 
 </html>
