--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <input type="hidden" name="access_key" value="ac7d84ef-e6b6-4caa-9967-b4907d16c897">
 
-  
+      <label for ="name">Name</label><br>
     <p><input type="text" name="name" required></p>
+     <label for ="email">Email</label><br>
     <p><input type="email" name="email" required></p>
+      <label for ="message">Drop Message</label><br>
     <p><textarea name="message" required></textarea></p>
-
-
     <button type="submit">Submit Form</button>
 
 </form>
