--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <p><input type="email" name="email" required></p>
       <label for ="message">Drop Message</label><br>
     <p><textarea name="message" required></textarea></p>
+
+<div class="h-captcha" data-captcha="true"></div>
     <button type="submit">Submit Form</button>
 
 </form>
+
+
+<script src="https://web3forms.com/client/script.js" async defer></script>
   </div>
   
 </body>
