--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <p><input type="text" name="name" required></p>
      <label for ="email">Email</label><br>
     <p><input type="email" name="email" required></p>
+
+<label for ="number">Number</label><br>
+    <p><input type="number" name="number" required></p>
+
       <label for ="message">Drop Message</label><br>
     <p><textarea name="message" required></textarea></p>
 
