--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
              
             </div>
           </div>
+          <div class="h-captcha" data-captcha="true"></div>
           <div class="mb-6">
             <button type="submit" class="w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none">
               Send Message
@@ -84,6 +85,7 @@
   </div>
 </div>
  <script scr="script.js"></script>
+  <script src="https://web3forms.com/client/script.js" async defer></script>
 </body>
 
 </html>
